IMPALA-7857: log more information about statestore failure detection

This adds a couple of log messages for state transitions in the
statestore's failure detector.

Testing:
Ran test_statestore.py and checked for presence of new log messages.

Added a new tests to test_statestore that exercises handling of
intermittent heartbeat failures (required to produce one of the new log
messages).

Change-Id: Ie6ff85bee117000e4434dcffd3d1680a79905f14
Reviewed-on: http://gerrit.cloudera.org:8080/11937
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>